tests/ui/impl-trait/universal-mismatched-type.stderr
error[E0308]: mismatched types
  --> $DIR/universal-mismatched-type.rs:4:5
   |
LL | fn foo(x: impl Debug) -> String {
   |           ----------     ------ expected `String` because of return type
   |           |
   |           this type parameter
LL |     x
   |     ^ expected `String`, found type parameter `impl Debug`
   |
   = note:      expected struct `String`
           found type parameter `impl Debug`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
