tests/ui/impl-trait/universal-mismatched-type.rs
use std::fmt::Debug;

fn foo(x: impl Debug) -> String {
    x //~ ERROR mismatched types
}

fn main() { }
